# pyadguard

./: .gitignore  README.md  pyproject.toml  sample.env  setup.cfg  setup.py
examples/: add_rewrite.py  get_client_by_ip.py  get_rewrites.py  get_stats.py
pyadguard/: __init__.py
src/pyadguard/: _version.py
