[tool.poetry]
name = "pyAdguard"
version = "0.0.0.1"
description = "Python Wrapper for the Adguard Home API"
authors = [
  { name="Lars Jelschen", email="mail@lars-jelschen.de" },
]
maintainers = [name="Lars Jelschen", email="mail@lars-jelschen.de"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
documentation = "e"
keywords = ["adguard home", "adguard", "api", "wrapper", "client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "pyadguard", from = "src" },
]
